# OpenGLEngine

./: .gitignore  CMakeLists.txt
cmake/: stb.cmake  tinygltf.cmake
gl/: CMakeLists.txt
gl/include/gl/: attribs.hpp  bitflag.hpp  buffer.hpp  cubeMap.hpp  fence.hpp  framebuffer.hpp  gl.hpp  id.hpp  shaders.hpp  structs.hpp  texture.hpp  vao.hpp
gl/src/: CMakeLists.txt  attribs.cpp  buffer.cpp  debug.cpp  logger.cpp  shaders.cpp  texture.cpp  vao.cpp
include/: CMakeLists.txt
include/engine/: app.hpp  camera.hpp  constants.hpp  frame_info.hpp  frustum.hpp  glLoader.hpp  globals.hpp  gui.hpp  image.hpp  input.hpp  mesh.hpp  mesh_animation.hpp  mesh_material.hpp  mesh_node.hpp  plane.hpp  scene_graph.hpp  scene_node.hpp  split_camera.hpp  window.hpp
include/engine/mesh/: animated_mesh.hpp  basic.hpp  mesh.hpp  mesh_animation.hpp  mesh_data.hpp  mesh_material.hpp
logger/include/logger/: log.hpp
src/: CMakeLists.txt  app.cpp  camera.cpp  frustum.cpp  glLoader.cpp  globals.cpp  gui.cpp  image.cpp  input.cpp  logger.cpp  logger.hpp  mesh.cpp  mesh_animation.cpp  mesh_material.cpp  scene_graph.cpp  scene_node.cpp  window.cpp
src/mesh/: animated_mesh.cpp  basic.cpp  mesh.cpp  mesh_animation.cpp  mesh_data.cpp  mesh_material.cpp
